complete like and collect and browse func
